--- a/src/css/page.css
+++ b/src/css/page.css
@@ -60,6 +60,7 @@
   margin: 24px 0 0 0;
   border-radius: 10px;
   background-color: white;
+  flex: 1 0 auto; /*for IE11*/
   /* overflow: hidden; */
 }
 
